--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "react-virtuoso": "^4.5.0",
     "react-window": "^1.8.9"
   },
   "devDependencies": {
